--- a/public/page.html
+++ b/public/page.html
@@ -300,8 +300,8 @@
                     <div>
                     <label class="paragraf">These lists allow any registered user to manage the content that they want to watch or have already watched!</label>
 
-                        <label class="paragraf"> <b> Wish List: </b> Any content that has not been watched and is added to the list by the <Icon> icon.</label>
-                        <label class="paragraf"><b> Watched List: </b> Any content that was contained on the Wish List and was added to the list by the <Icon> icon.</label>
+                        <label class="paragraf"> <b> Wish List: </b> Any content that has not been watched and is added to the list by the <button id="add-wish"></button> icon.</label>
+                        <label class="paragraf"><b> Watched List: </b> Any content that was contained on the Wish List and was added to the list by the <button id="add-watch"></button> icon.</label>
                     </div>
                 </div>
 
