The final countdown (Fixed image not showing on edit)

--- a/public/page.html
+++ b/public/page.html
@@ -205,7 +205,7 @@
                         </tbody>
                     </table>
                 </div>
-                <label class="subTitle">API One Tv Shows</label>
+                <label class="subTitle">API One Tv Show</label>
                 <label class="paragraf">Obtain one of our tv shows:</label>
                 <label class="paragraf">In order to access to this resource, you must perform a GET to the /tv endpoint with one of the next parameters.</label>
                 <div class="code">
